[gd_scene load_steps=14 format=3 uid="uid://xvjv4bumkuk1"]

[ext_resource type="Script" uid="uid://dddya8o0kmw8t" path="res://Scripts/Game.gd" id="1_iukft"]
[ext_resource type="PackedScene" uid="uid://dq3baa81b3v06" path="res://Scenes/AppleTile.tscn" id="2_gl6un"]
[ext_resource type="AudioStream" uid="uid://c57ipx00p2u0h" path="res://Assets/BGM.mp3" id="3_j5yw3"]
[ext_resource type="Texture2D" uid="uid://b82l2v331ildu" path="res://Assets/Apple.png" id="4_b2bpf"]
[ext_resource type="Texture2D" uid="uid://ex0ynk564bds" path="res://Assets/GoldenApple.png" id="5_7lihs"]
[ext_resource type="AudioStream" uid="uid://bnhd435enldyj" path="res://Assets/Sound.mp3" id="6_7lihs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7lihs"]
bg_color = Color(0.89420825, 0.8782205, 0.7373294, 0.75000006)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gl6un"]
bg_color = Color(0, 0, 0, 0.56078434)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5yw3"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b2bpf"]
bg_color = Color(0.97275597, 0.0004207109, 0.13355282, 0.651)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j5yw3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kldst"]
bg_color = Color(0.21169457, 0.7066628, 0.3874912, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgofq"]
bg_color = Color(0.9039792, 0.06720159, 0.21786085, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iukft")
tile_scene = ExtResource("2_gl6un")

[node name="BackGround" type="Panel" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7lihs")

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.50677085
anchor_top = 0.0009259259
anchor_right = 0.50677085
anchor_bottom = 0.0009259259
offset_left = -597.0
offset_top = 49.0
offset_right = -445.0
offset_bottom = 116.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "120.0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TimeBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(400, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.50677085
anchor_top = 0.0009259259
anchor_right = 0.50677085
anchor_bottom = 0.0009259259
offset_left = -456.0
offset_top = 61.0
offset_right = 397.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_gl6un")
theme_override_styles/fill = SubResource("StyleBoxFlat_j5yw3")
max_value = 120.0
value = 120.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.47083333
anchor_top = 0.44351852
anchor_right = 0.51770836
anchor_bottom = 0.5638889
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="BoardRoot" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="BoardCenter" type="CenterContainer" parent="VBoxContainer/BoardRoot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = 24.0
offset_right = 15.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="VBoxContainer/BoardRoot/BoardCenter"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50

[node name="DragLayer" type="Control" parent="VBoxContainer/BoardRoot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2775.5
offset_top = -1853.5
offset_right = 2775.5
offset_bottom = 1853.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EffectsLayer" type="Control" parent="VBoxContainer/BoardRoot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3195.0
offset_top = -2407.5
offset_right = 3195.0
offset_bottom = 2407.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ResultOverlay" type="Control" parent="VBoxContainer/BoardRoot"]
anchors_preset = 0
offset_left = -194.0
offset_top = -71.0
offset_right = -154.0
offset_bottom = -31.0

[node name="Dim" type="Panel" parent="VBoxContainer/BoardRoot/ResultOverlay"]
layout_mode = 0
offset_left = -24.0
offset_top = -21.0
offset_right = 504.0
offset_bottom = 319.0
theme_override_styles/panel = SubResource("StyleBoxFlat_b2bpf")

[node name="ResultPanel" type="PanelContainer" parent="VBoxContainer/BoardRoot/ResultOverlay"]
custom_minimum_size = Vector2(480, 300)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_j5yw3")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BoardRoot/ResultOverlay/ResultPanel"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TitleLabel" type="Label" parent="VBoxContainer/BoardRoot/ResultOverlay/ResultPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_kldst")
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="VBoxContainer/BoardRoot/ResultOverlay/ResultPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 48
text = "999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/BoardRoot/ResultOverlay/ResultPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "시작 화면으로 나가기
"

[node name="GameTimer" type="Timer" parent="."]

[node name="BGMPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_j5yw3")
bus = &"Music"

[node name="SEPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7lihs")
volume_db = 10.097
bus = &"SFX"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
offset_left = 26.0
offset_top = 29.0
offset_right = 116.0
offset_bottom = 122.0
theme_override_font_sizes/font_size = 24
text = "나가기"

[node name="Apples" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 440.0
offset_top = 56.0
offset_right = 487.0
offset_bottom = 108.0
grow_horizontal = 2

[node name="ProgressBar" type="ProgressBar" parent="Apples"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021276595
anchor_top = -0.13461539
anchor_right = 3.8297873
anchor_bottom = 1.0961539
theme_override_styles/background = SubResource("StyleBoxFlat_fgofq")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Apples"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.2553196
anchor_top = -1.0384616
anchor_right = 2.957446
anchor_bottom = 1.3846154
texture = ExtResource("4_b2bpf")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Apples"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.8844514
anchor_top = -4.3386755
anchor_right = 1.094272
anchor_bottom = -2.3963678
offset_left = 58.569267
offset_top = 207.61111
offset_right = 58.569267
offset_bottom = 207.61111
texture = ExtResource("4_b2bpf")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" type="TextureRect" parent="Apples"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25531802
anchor_top = -0.21153846
anchor_right = 1.9148927
anchor_bottom = 1.5053065
texture = ExtResource("4_b2bpf")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="TextureRect4" type="TextureRect" parent="Apples"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04255319
anchor_top = 0.115384616
anchor_right = 1.6595745
anchor_bottom = 1.4484332
texture = ExtResource("5_7lihs")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="Apples"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.7021277
anchor_top = -0.17307693
anchor_right = 3.4468088
anchor_bottom = 1.1153846
offset_right = -1.5258789e-05
theme_override_font_sizes/font_size = 40
text = "999"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
